versioned_docs/version-0.12/reference/xlang-api/go-api.md
---
sidebar_position: 3
---

# Go API

<!-- Code generated by gomarkdoc. DO NOT EDIT -->

```go
import "kcl-lang.io/kcl-go"
```

```
┌─────────────────┐         ┌─────────────────┐           ┌─────────────────┐
│     kcl files   │         │    KCL-Go-API   │           │  KCLResultList  │
│  ┌───────────┐  │         │                 │           │                 │
│  │    1.k    │  │         │                 │           │                 │
│  └───────────┘  │         │                 │           │  ┌───────────┐  │         ┌───────────────┐
│  ┌───────────┐  │         │  ┌───────────┐  │           │  │ KCLResult │──┼────────▶│x.Get("a.b.c") │
│  │    2.k    │  │         │  │ Run(path) │  │           │  └───────────┘  │         └───────────────┘
│  └───────────┘  │────┐    │  └───────────┘  │           │                 │
│  ┌───────────┐  │    │    │                 │           │  ┌───────────┐  │         ┌───────────────┐
│  │    3.k    │  │    │    │                 │           │  │ KCLResult │──┼────────▶│x.Get("k", &v) │
│  └───────────┘  │    │    │                 │           │  └───────────┘  │         └───────────────┘
│  ┌───────────┐  │    ├───▶│  ┌───────────┐  │──────────▶│                 │
│  │setting.yml│  │    │    │  │RunFiles() │  │           │  ┌───────────┐  │         ┌───────────────┐
│  └───────────┘  │    │    │  └───────────┘  │           │  │ KCLResult │──┼────────▶│x.JSONString() │
└─────────────────┘    │    │                 │           │  └───────────┘  │         └───────────────┘
                       │    │                 │           │                 │
┌─────────────────┐    │    │                 │           │  ┌───────────┐  │         ┌───────────────┐
│     Options     │    │    │  ┌───────────┐  │           │  │ KCLResult │──┼────────▶│x.YAMLString() │
│WithOptions      │    │    │  │MustRun()  │  │           │  └───────────┘  │         └───────────────┘
│WithOverrides    │────┘    │  └───────────┘  │           │                 │
│WithWorkDir      │         │                 │           │                 │
│WithDisableNone  │         │                 │           │                 │
└─────────────────┘         └─────────────────┘           └─────────────────┘
```

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const k_code = `
name = "kcl"
age = 1

two = 2

schema Person:
    name: str = "kcl"
    age: int = 1

x0 = Person {}
x1 = Person {
	age = 101
}
`

	yaml := kcl.MustRun("testdata/main.k", kcl.WithCode(k_code)).First().YAMLString()
	fmt.Println(yaml)

	fmt.Println("----")

	result := kcl.MustRun("./testdata/main.k").First()
	fmt.Println(result.JSONString())

	fmt.Println("----")
	fmt.Println("x0.name:", result.Get("x0.name"))
	fmt.Println("x1.age:", result.Get("x1.age"))

	fmt.Println("----")

	var person struct {
		Name string
		Age  int
	}
	fmt.Printf("person: %+v\n", result.Get("x1", &person))
}
```

</p>
</details>


## Constants

KclAbiVersion is the current kcl ABI version.

```go
const KclAbiVersion = scripts.KclAbiVersion
```

## func [FormatCode](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L156)

```go
func FormatCode(code interface{}) ([]byte, error)
```

FormatCode returns the formatted code.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	out, err := kcl.FormatCode(`a  =  1+2`)
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println(string(out))

}
```

```
a = 1 + 2
```

</p>
</details>

## func [FormatPath](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L168)

```go
func FormatPath(path string) (changedPaths []string, err error)
```

FormatPath formats files from the given path path: if path is \`.\` or empty string, all KCL files in current directory will be formatted, not recursively if path is \`path/file.k\`, the specified KCL file will be formatted if path is \`path/to/dir\`, all KCL files in the specified dir will be formatted, not recursively if path is \`path/to/dir/...\`, all KCL files in the specified dir will be formatted recursively

the returned changedPaths are the changed file paths \(relative path\)

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	changedPaths, err := kcl.FormatPath("testdata/fmt")
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println(changedPaths)
}
```

</p>
</details>

## func [GetSchemaTypeMapping](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L247)

```go
func GetSchemaTypeMapping(filename string, src any, schemaName string) (map[string]*KclType, error)
```

GetSchemaTypeMapping returns a \<schemaName\>:\<schemaType\> mapping of schema types from a kcl file or code.

file: string

```
The kcl filename
```

code: string

```
The kcl code string
```

schema_name: string

```
The schema name got, when the schema name is empty, all schemas are returned.
```


## func [LintPath](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L188)

```go
func LintPath(paths []string) (results []string, err error)
```

LintPath lint files from the given path

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	// import a
	// import a # reimport

	results, err := kcl.LintPath([]string{"testdata/lint/import.k"})
	if err != nil {
		log.Fatal(err)
	}
	for _, s := range results {
		fmt.Println(s)
	}

}
```

```
Module 'a' is reimported multiple times
Module 'a' imported but unused
Module 'a' imported but unused
```

</p>
</details>

## func [ListDepFiles](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L173)

```go
func ListDepFiles(workDir string, opt *ListDepFilesOption) (files []string, err error)
```

ListDepFiles return the depend files from the given path

## func [ListDownStreamFiles](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L183)

```go
func ListDownStreamFiles(workDir string, opt *ListDepsOptions) ([]string, error)
```

ListDownStreamFiles return a list of downstream depend files from the given changed path list.

## func [ListUpStreamFiles](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L178)

```go
func ListUpStreamFiles(workDir string, opt *ListDepsOptions) (deps []string, err error)
```

ListUpStreamFiles return a list of upstream depend files from the given path list

## func [OverrideFile](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L197)

```go
func OverrideFile(file string, specs, importPaths []string) (bool, error)
```

OverrideFile rewrites a file with override spec file: string. The File that need to be overridden specs: \[\]string. List of specs that need to be overridden. importPaths. List of import statements that need to be added. See https://www.kcl-lang.io/docs/user_docs/guides/automation for more override spec guide.

## func [Validate](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L208)

```go
func Validate(dataFile, schemaFile string, opts *ValidateOptions) (ok bool, err error)
```

Validate validates the given data file against the specified schema file with the provided options.

## func [ValidateCode](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L202)

```go
func ValidateCode(data, code string, opts *ValidateOptions) (ok bool, err error)
```

ValidateCode validate data string match code string

## type [KCLResult](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L56)

```go
type KCLResult = kcl.KCLResult
```

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const k_code = `
name = "kcl"
age = 1

two = 2

schema Person:
    name: str = "kcl"
    age: int = 1

x0 = Person {name = "kcl-go"}
x1 = Person {age = 101}
`

	result := kcl.MustRun("testdata/main.k", kcl.WithCode(k_code)).First()

	fmt.Println("x0.name:", result.Get("x0.name"))
	fmt.Println("x1.age:", result.Get("x1.age"))

}
```

```
x0.name: kcl-go
x1.age: 101
```

</p>
</details>

<details><summary>Example (Get)</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const k_code = `
schema Person:
    name: str = "kcl"
    age: int = 1
    X: int = 2

x = {
    "a": Person {age = 101}
    "b": 123
}
`

	result := kcl.MustRun("testdata/main.k", kcl.WithCode(k_code)).First()

	var person struct {
		Name string
		Age  int
	}
	fmt.Printf("person: %+v\n", result.Get("x.a", &person))
	fmt.Printf("person: %+v\n", person)

}
```

```
person: &{Name:kcl Age:101}
person: {Name:kcl Age:101}
```

</p>
</details>

## type [KCLResultList](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L57)

```go
type KCLResultList = kcl.KCLResultList
```

### func [MustRun](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L74)

```go
func MustRun(path string, opts ...Option) *KCLResultList
```

MustRun is like Run but panics if return any error.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	yaml := kcl.MustRun("testdata/main.k", kcl.WithCode(`name = "kcl"`)).First().YAMLString()
	fmt.Println(yaml)

}
```

```
name: kcl
```

</p>
</details>

<details><summary>Example (Raw Yaml)</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const code = `
b = 1
a = 2
`
	yaml := kcl.MustRun("testdata/main.k", kcl.WithCode(code)).GetRawYamlResult()
	fmt.Println(yaml)

	yaml_sorted := kcl.MustRun("testdata/main.k", kcl.WithCode(code), kcl.WithSortKeys(true)).GetRawYamlResult()
	fmt.Println(yaml_sorted)

}
```

```
b: 1
a: 2
a: 2
b: 1
```

</p>
</details>

<details><summary>Example (Schema Type)</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const code = `
schema Person:
	name: str = ""

x = Person()
`
	json := kcl.MustRun("testdata/main.k", kcl.WithCode(code)).First().JSONString()
	fmt.Println(json)

}
```

```
{
    "x": {
        "name": ""
    }
}
```

</p>
</details>

<details><summary>Example (Settings)</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	yaml := kcl.MustRun("./testdata/app0/kcl.yaml").First().YAMLString()
	fmt.Println(yaml)
}
```

</p>
</details>

### func [Run](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L79)

```go
func Run(path string, opts ...Option) (*KCLResultList, error)
```

Run evaluates the KCL program with path and opts, then returns the object list.

### func [RunFiles](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L84)

```go
func RunFiles(paths []string, opts ...Option) (*KCLResultList, error)
```

RunFiles evaluates the KCL program with multi file path and opts, then returns the object list.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	result, _ := kcl.RunFiles([]string{"./testdata/app0/kcl.yaml"})
	fmt.Println(result.First().YAMLString())
}
```

</p>
</details>

## type [KclType](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L59)

```go
type KclType = kcl.KclType
```

### func [GetSchemaType](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L230)

```go
func GetSchemaType(filename string, src any, schemaName string) ([]*KclType, error)
```

GetSchemaType returns schema types from a kcl file or code.

file: string

```
The kcl filename
```

code: string

```
The kcl code string
```

schema_name: string

```
The schema name got, when the schema name is empty, all schemas are returned.
```

## type [ListDepFilesOption](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L51)

```go
type ListDepFilesOption = list.Option
```

## type [ListDepsOptions](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L50)

```go
type ListDepsOptions = list.DepOptions
```

## type [ListOptionsArgs](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L67)

```go
type ListOptionsArgs = loader.ListOptionsArgs
```

## type [ListOptionsResult](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L68)

```go
type ListOptionsResult = loader.ListOptionsResult
```

### func [ListOptions](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L269)

```go
func ListOptions(args *ListOptionsArgs) (*ListOptionsResult, error)
```

ListOptions provides users with the ability to parse kcl program and get all option calling information.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	result, err := kcl.ListOptions(&kcl.ListOptionsArgs{
		Paths: []string{"testdata/option/main.k"},
	})
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println(result)
}
```

</p>
</details>

## type [ListVariablesArgs](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L65)

```go
type ListVariablesArgs = loader.ListVariablesArgs
```

## type [ListVariablesResult](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L66)

```go
type ListVariablesResult = loader.ListVariablesResult
```

### func [ListVariables](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L263)

```go
func ListVariables(args *ListVariablesArgs) (*ListVariablesResult, error)
```

ListVariables provides users with the ability to parse KCL program and get all variables by specs.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	result, err := kcl.ListVariables(&kcl.ListVariablesArgs{
		Files: []string{"testdata/main.k"},
	})
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println(result)
}
```

```
variables:{key:"age"  value:{variables:{value:"2"  op_sym:"="}}}  variables:{key:"four"  value:{variables:{value:"4"  op_sym:"="}}}  variables:{key:"name"  value:{variables:{value:"\"kcl-go\""  op_sym:"="}}}  variables:{key:"x0"  value:{variables:{value:"Person {}"  type_name:"Person"  op_sym:"="}}}  variables:{key:"x1"  value:{variables:{value:"Person {age = 101}"  type_name:"Person"  op_sym:"="  dict_entries:{key:"age"  value:{value:"101"  op_sym:"="}}}}}
```

</p>
</details>

## type [LoadPackageArgs](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L63)

```go
type LoadPackageArgs = loader.LoadPackageArgs
```

## type [LoadPackageResult](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L64)

```go
type LoadPackageResult = loader.LoadPackageResult
```

### func [LoadPackage](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L258)

```go
func LoadPackage(args *LoadPackageArgs) (*LoadPackageResult, error)
```

LoadPackage provides users with the ability to parse KCL program and semantic model information including symbols, types, definitions, etc.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	result, err := kcl.LoadPackage(&kcl.LoadPackageArgs{
		ParseArgs: &kcl.ParseProgramArgs{
			Paths: []string{"testdata/main.k"},
		},
		ResolveAst: true,
	})
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println(result)
}
```

</p>
</details>

## type [Option](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L49)

```go
type Option = kcl.Option
```

### func [NewOption](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L89)

```go
func NewOption() *Option
```

NewOption returns a new Option.

### func [WithCode](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L94)

```go
func WithCode(codes ...string) Option
```

WithCode returns a Option which hold a kcl source code list.

### func [WithDisableNone](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L123)

```go
func WithDisableNone(disableNone bool) Option
```

WithDisableNone returns a Option which hold a disable none switch.

### func [WithExternalPkgAndPath](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L100)

```go
func WithExternalPkgAndPath(name, path string) Option
```

WithExternalPkgAndPath returns a Option which hold a external package.

### func [WithExternalPkgs](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L97)

```go
func WithExternalPkgs(externalPkgs ...string) Option
```

WithExternalPkgs returns a Option which hold a external package list.

### func [WithFullTypePath](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L131)

```go
func WithFullTypePath(fullTypePath bool) Option
```

WithFullTypePath returns a Option which hold a include full type string in the \`\_type\` attribute.

### func [WithIncludeSchemaTypePath](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L126)

```go
func WithIncludeSchemaTypePath(includeSchemaTypePath bool) Option
```

WithIncludeSchemaTypePath returns a Option which hold a include schema type path switch.

### func [WithKFilenames](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L105)

```go
func WithKFilenames(filenames ...string) Option
```

WithKFilenames returns a Option which hold a filenames list.

### func [WithLogger](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L151)

```go
func WithLogger(l io.Writer) Option
```

WithLogger returns a Option which hold a logger.

### func [WithOptions](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L108)

```go
func WithOptions(key_value_list ...string) Option
```

WithOptions returns a Option which hold a key=value pair list for option function.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const code = `
name = option("name")
age = option("age")
`
	x, err := kcl.Run("hello.k", kcl.WithCode(code),
		kcl.WithOptions("name=kcl", "age=1"),
	)
	if err != nil {
		log.Fatal(err)
	}

	fmt.Println(x.First().YAMLString())

}
```

```
age: 1
name: kcl
```

</p>
</details>

### func [WithOverrides](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L111)

```go
func WithOverrides(override_list ...string) Option
```

WithOverrides returns a Option which hold a override list.

### func [WithPrintOverridesAST](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L136)

```go
func WithPrintOverridesAST(printOverridesAST bool) Option
```

WithPrintOverridesAST returns a Option which hold a printOverridesAST switch.

### func [WithSelectors](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L114)

```go
func WithSelectors(selectors ...string) Option
```

WithSelectors returns a Option which hold a path selector list.

### func [WithSettings](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L117)

```go
func WithSettings(filename string) Option
```

WithSettings returns a Option which hold a settings file.

### func [WithShowHidden](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L146)

```go
func WithShowHidden(showHidden bool) Option
```

WithShowHidden returns a Option which holds a showHidden switch.

### func [WithSortKeys](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L141)

```go
func WithSortKeys(sortKeys bool) Option
```

WithSortKeys returns a Option which holds a sortKeys switch.

### func [WithWorkDir](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L120)

```go
func WithWorkDir(workDir string) Option
```

WithWorkDir returns a Option which hold a work dir.

## type [ParseProgramArgs](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L69)

```go
type ParseProgramArgs = parser.ParseProgramArgs
```

## type [ParseProgramResult](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L70)

```go
type ParseProgramResult = parser.ParseProgramResult
```

### func [ParseProgram](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L252)

```go
func ParseProgram(args *ParseProgramArgs) (*ParseProgramResult, error)
```

Parse KCL program with entry files and return the AST JSON string.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	result, err := kcl.ParseProgram(&kcl.ParseProgramArgs{
		Paths: []string{"testdata/main.k"},
	})
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println(result)
}
```

</p>
</details>

## type [TestCaseInfo](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L54)

```go
type TestCaseInfo = testing.TestCaseInfo
```

## type [TestOptions](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L53)

```go
type TestOptions = testing.TestOptions
```

## type [TestResult](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L55)

```go
type TestResult = testing.TestResult
```

### func [Test](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L213)

```go
func Test(testOpts *TestOptions, opts ...Option) (TestResult, error)
```

Test calls the test tool to run uni tests in packages.

## type [UpdateDependenciesArgs](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L61)

```go
type UpdateDependenciesArgs = module.UpdateDependenciesArgs
```

## type [UpdateDependenciesResult](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L62)

```go
type UpdateDependenciesResult = module.UpdateDependenciesResult
```

### func [UpdateDependencies](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L274)

```go
func UpdateDependencies(args *UpdateDependenciesArgs) (*UpdateDependenciesResult, error)
```

Download and update dependencies defined in the kcl.mod file and return the external package name and location list.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
	"kcl-lang.io/kcl-go/pkg/spec/gpyrpc"
)

func main() {
	// [package]
	// name = "mod_update"
	// edition = "0.0.1"
	// version = "0.0.1"
	//
	// [dependencies]
	// helloworld = { oci = "oci://ghcr.io/kcl-lang/helloworld", tag = "0.1.0" }
	// flask = { git = "https://github.com/kcl-lang/flask-demo-kcl-manifests", commit = "ade147b" }

	result, err := kcl.UpdateDependencies(&gpyrpc.UpdateDependenciesArgs{
		ManifestPath: "testdata/update_dependencies",
	})
	if err != nil {
		log.Fatal(err)
	}

	fmt.Println(result)
}
```

</p>
</details>

<details><summary>Example (Exec Program)</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	"kcl-lang.io/kcl-go/pkg/native"
	"kcl-lang.io/kcl-go/pkg/spec/gpyrpc"
)

func main() {
	// [package]
	// name = "mod_update"
	// edition = "0.0.1"
	// version = "0.0.1"
	//
	// [dependencies]
	// helloworld = { oci = "oci://ghcr.io/kcl-lang/helloworld", tag = "0.1.0" }
	// flask = { git = "https://github.com/kcl-lang/flask-demo-kcl-manifests", commit = "ade147b" }

	svc := native.NewNativeServiceClient()

	result, err := svc.UpdateDependencies(&gpyrpc.UpdateDependenciesArgs{
		ManifestPath: "testdata/update_dependencies",
	})
	if err != nil {
		log.Fatal(err)
	}

	// import helloworld
	// import flask
	// a = helloworld.The_first_kcl_program
	// fmt.Println(result.ExternalPkgs)

	execResult, err := svc.ExecProgram(&gpyrpc.ExecProgramArgs{
		KFilenameList: []string{"testdata/update_dependencies/main.k"},
		ExternalPkgs:  result.ExternalPkgs,
	})
	if err != nil {
		log.Fatal(err)
	}

	fmt.Println(execResult.YamlResult)

}
```

```
a: Hello World!
```

</p>
</details>

## type [ValidateOptions](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L52)

```go
type ValidateOptions = validate.ValidateOptions
```

## type [VersionResult](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L60)

```go
type VersionResult = kcl.VersionResult
```

### func [GetVersion](https://github.com/kcl-lang/kcl-go/blob/main/kcl.go#L279)

```go
func GetVersion() (*VersionResult, error)
```

GetVersion returns the KCL service version information.
